# smart-stock-insider

./: .env.example  .gitignore  CHANGELOG.md  GIT_READY_CHECKLIST.md  Makefile  PROJECT_FILES.md  README.md  VERSION  build-config.md  build.bat  build.sh  docker-compose.yml  go.mod  main.go  package-lock.json  package.json  pytest.ini  requirements-final.txt  wails.json  产品设计文档.md  技术架构文档.md  智股通项目演示.md  用户使用指南.md  项目总结报告.md
.claude/plan/: ai-enhanced-desktop-app.md
.serena/: project.yml
archived/deprecated-frontend/src-tauri/: Cargo.toml
archived/deprecated-frontend/src-tauri/src/: main.rs
backend/: ai_analysis.py  analysis.py  analytics.py  app_logging.py  backtest.py  backup.py  cache.py  chatbot.py  database.py  exceptions.py  main_standalone.py  news.py  notification.py  portfolio.py  sentiment.py  user.py
config/: extended_news_sources.json
data-service/: README.md  ai_service.py  config.py  data_provider.py  main.py  requirements.txt  start.py
docs/: DOCUMENTATION_INDEX.md  api-documentation.md  deployment.md  extended_news_integration.md  import-export-guide.md  news_push_integration.md  portfolio_analysis.md  user-manual.md  新闻模块开发报告.md  项目开发进度报告.md
frontend/: .eslintrc.cjs  .prettierignore  .prettierrc  Dockerfile.dev  check-typescript.cjs  index.html  package-lock.json  package.json  package.json.md5  tailwind.config.js  tsconfig.json  tsconfig.test.json  vite.config.ts
scripts/: build-unix.sh  build-windows.bat  init_database.sql  quick_env_check.py  run_tests.py  setup.ps1  setup.sh  setup_python_env.py  verify_environment.py
(+188 files in other folders)
