[package]
name = "smart-stock-insider"
version = "1.0.0"
description = "智股通 - 基于AI的桌面投资研究平台"
authors = ["Smart Stock Insider Team"]
license = "MIT"
repository = "https://github.com/your-username/smart-stock-insider"
default-run = "smart-stock-insider"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-window = { version = "2.0.0" }
tauri-plugin-shell = { version = "2.0.0" }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "smart-stock-insider"
path = "src/main.rs"
